--- a/bookingStatus.html
+++ b/bookingStatus.html
@@ -10,12 +10,14 @@
     <body class="background" style="text-align:center">
         <br>
         <br>
+        <div class="signUp">
         <h3 style="font-size:30px ;color:rgb(12, 32, 32); "> current booking : </h3>
-        
-        <p style="font-size:25px ;color:azure; background-color: rgb(49, 166, 224); "> you have sent booking request to sami but he doesn't responce yet !!
+        <p style="font-size:25px ;color:rgb(20, 3, 78); "> you have sent booking request to sami but he <strong>doesn't responce yet</strong> !!
             <br> be patient he will responce soon .
         </p>
+    </div>
         
+    <div class="signUp">
         <h3 style="font-size:30px ;color:rgb(2, 9, 9); "> previous booking : </h3>
         <table border= 3px class="tableBooking">
             <tbody>
@@ -71,5 +73,6 @@
         </tbody>
 
         </table>
+    </div>
     </body>
 </html>
