--- a/jobStatus.html
+++ b/jobStatus.html
@@ -3,14 +3,78 @@
     <head>
         <title>job status</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="../web-project/style.css">
+        <link rel="stylesheet" type="text/css" href="../web-project/booking.css">
+
     </head>
     <body class="background" style="text-align:center">
-        <h3>current job :</h3>
-        <p>a full time babysitter for ms.reema until 30 may 2023
-            <br>teacher has 3 child (fahad 2 years old , dana 4 years old , sara 3 month old)
-            <br>in riyadh 
-            <br> turki alawal street 
-            <br> price per hour work 50SR</p>
-        <h3>previous job :</h3>
+        <br>
+        <div class="signUp">
+        <h3 style="font-size:30px ;color:rgb(2, 9, 9); ">current job :</h3>
+        <p style="font-size:25px ;color:rgb(6, 17, 71); ">
+            a <strong>full time </strong>babysitter for ms.reema
+            <br> until 30 may 2023
+            <br> she is a <strong>teacher has 3 child</strong> 
+            <br>(fahad 2years old , dana 4years old , sara 3month old)
+            <br><strong>in riyadh </strong> turki alawal street  
+            <br> price per hour work <strong>50SR</strong></p>
+        </div>
+        <div class="signUp">
+        <h3 style="font-size:30px ;color:rgb(2, 9, 9); "  >previous job :</h3>
+        <table border= 3px class="tableBooking">
+            <tbody>
+            <tr> 
+                <th>year</th>
+                <th>number of hour</th>
+                <th>name of babysetter</th>
+                <th>price per hour</th>
+            </tr>
+            <tr>
+                <td>2022</td>
+                <td>3 hours</td>
+                <td>sami</td>
+                <td>50 SR</td>
+            </tr>
+            <tr>
+                <td>2022</td>
+                <td>5 hours</td>
+                <td>sara</td>
+                <td>70 SR</td>
+            </tr>
+            <tr>
+                <td>2021</td>
+                <td>2.5 hours</td>
+                <td>sami</td>
+                <td>56 SR</td>
+            </tr>
+            <tr>
+                <td>2021</td>
+                <td>1 hour</td>
+                <td>bushra</td>
+                <td>80 SR</td>
+            </tr>
+            <tr>
+                <td>2021</td>
+                <td>3 hours</td>
+                <td>sami</td>
+                <td>40 SR</td>
+            </tr>
+            <tr>
+                <td>2021</td>
+                <td>3 hours</td>
+                <td>fatima</td>
+                <td>50 SR</td>
+            </tr>
+            <tr>
+                <td>2019</td>
+                <td>3 hours</td>
+                <td>dana</td>
+                <td>60 SR</td>
+            </tr>
+
+        </tbody>
+
+        </table>
+    </div>
     </body>
 </html>
