--- a/offerStatus.html
+++ b/offerStatus.html
@@ -3,8 +3,16 @@
     <head>
         <mata charset="UTF-8">
         <title>offer status</title>
+        <link rel="stylesheet" type="text/css" href="../web-project/style.css">
     </head>
-    <body class="background" style="text-align:center">
 
+    <body class="background" style="text-align:center">
+    <div class="signUp">
+    <p>offer which you sent to Ms.afnan</p>
+    <label><input type="button" value="accepted" style="background-color:green;border-color:green;"></label>
+    <p>you will start working tomorrow until 3april</p>
+    <p>you will work 7 hour ber day from 8am until 3pm</p>
+    <P><a style="color:green ;text-decoration-style: double;" href="https://goo.gl/maps/4pBw6wdV1Bo3H98A7" >view home location</a></P>
+    </div>
     </body>
 </html>
