--- a/Thank.html
+++ b/Thank.html
@@ -10,7 +10,7 @@
 
 <body class="background" >
 <h1 class="thank-you"> Thank You ! </h1>
-<h2 class="submitted-thank"> Your rating and review has been successfully submitted. Thanks! </h2>
+<h2 class="submitted-thank"> Your rating and review has been successfully submitted.</h2>
 
 <a href="parentHomePage.html">
     <input type="button" value="back" class="details-button">
