--- a/mainHomePageM.html
+++ b/mainHomePageM.html
@@ -9,6 +9,21 @@
  
     <title>main home page</title> 
 </head>
+<header><nav class="navig" > 
+    <ul class="ul-style">
+
+        <li><a href="../web-project/offerList.html">offer list</a></li>
+        <li><a href="../web-project/signUpBabysitterM.html" >manage babysitter profile</a></li>
+        <li><a href="../web-project/signupParentM.html">manage parent profile</a></li>
+        <li><a href="../web-project/jobRequest.html">view job request</a></li>
+        <li><a href="../web-project/bookingStatus.html">view booking status</a></li>
+        <li><a href="../web-project/offerStatus.html">view offer status</a></li>
+        <li><a href="../web-project/jobStatus.html">view job status</a></li>
+        <li><a href="../web-project/ReviewAndRate.html">view my review and rate</a></li>
+
+
+    </ul>
+    </nav></header>
 <body class="backgroundHomePage"  >
     <h1 class="menu"> Menu</h1>
 
@@ -25,20 +40,7 @@
 
 
 
-<nav class="navig" > 
-    <ul class="ul-style">
 
-        <li><a href="../web-project/offerList.html">offer list</a></li>
-        <li><a href="../web-project/signUpBabysitterM.html" >manage babysitter profile</a></li>
-        <li><a href="../web-project/signupParentM.html">manage parent profile</a></li>
-        <li><a href="../web-project/jobRequest.html">view job request</a></li>
-        <li><a href="../web-project/bookingStatus.html">view booking status</a></li>
-        <li><a href="../web-project/offerStatus.html">view offer status</a></li>
-        <li><a href="../web-project/jobStatus.html">view job status</a></li>
-        <li><a href="../web-project/ReviewAndRate.html">view my review and rate</a></li>
-
-
-    </ul>
     </nav>
 
 </body>
