--- a/mainHomePageM.html
+++ b/mainHomePageM.html
@@ -42,6 +42,15 @@
 
 
     </nav>
-
+   
+    </html>
 </body>
+<footer class="footer"> 
+    <br>
+    <a href="https://www.facebook.com/" ><img src="../web-project/facebook.png" width="18" height="18"></a>
+    <a href="https://twitter.com/"><img src="../web-project/twitter.png" width="18" height="18"></a>
+    <a href="https://www.instagram.com/"><img src="../web-project/instagram.png"width="18" height="18"></a>
+   
+    <p> babyhood &copy; <a href="https://www.w3schools.com/w3css/default.asp" >www.babyhood.com</a></p>
+  </footer>
 </html> 
