--- a/offerStatus.html
+++ b/offerStatus.html
@@ -4,15 +4,25 @@
         <mata charset="UTF-8">
         <title>offer status</title>
         <link rel="stylesheet" type="text/css" href="../web-project/style.css">
+        <link rel="stylesheet" type="text/css" href="../web-project/booking.css">
     </head>
 
     <body class="background" style="text-align:center">
-    <div class="signUp">
-    <p>offer which you sent to Ms.afnan</p>
-    <label><input type="button" value="accepted" style="background-color:green;border-color:green;"></label>
+    <div class="signUp"style="font-size:25px" >
+    <p>offer which you sent to Ms.Afnan</p>
+    <label><input type="button" value="Accepted" style="background-color:rgb(52, 244, 52);" class="status-button"></label>
     <p>you will start working tomorrow until 3april</p>
-    <p>you will work 7 hour ber day from 8am until 3pm</p>
+    <p>you will work 7 Hour per day from <strong>8AM</strong> until <strong>3PM</strong></p>
     <P><a style="color:green ;text-decoration-style: double;" href="https://goo.gl/maps/4pBw6wdV1Bo3H98A7" >view home location</a></P>
+    </div>
+    <div class="signUp" style="font-size:25px">
+        <p >offer which you sent to Dr.Huda </p>
+        <label><input type="button" value="Rejected" style="background-color:rgb(247, 24, 28);" class="status-button"></label>
+        <p style="color:red ;">your price is so expensive !</p>
+    </div>
+    <div class="signUp" style="font-size:25px">
+        <p>offer which you sent to eng.Ali</p>
+        <label><input type="button" value="Pending" style="background-color:rgb(233, 241, 91);" class="status-button"></label>
     </div>
     </body>
 </html>
