--- a/ParentHomePage1.html
+++ b/ParentHomePage1.html
@@ -16,6 +16,7 @@
     <div class="w3-right w3-hide-small">
      
       <a href="../web-project/Pprofile.html" class="w3-bar-item w3-button"><img src="../web-project/user.png" width="50" height="50"></a>
+      <a href="../web-project/Pprofile.html" class="w3-bar-item w3-button"></a>
     
     </div>
   </div>
