--- a/bookingStatus.html
+++ b/bookingStatus.html
@@ -38,7 +38,7 @@
         
     <div class="signUp">
         <h3 style="font-size:30px ;color:rgb(2, 9, 9); "> previous booking : </h3>
-        <p>Click on the name of the babysitter to give your rating</p>
+        <p>Click on the name of the babysitter to give your rating and review</p>
         <table border= 3px class="tableBooking">
             <tbody>
             <tr> 
