--- a/signupParentM.html
+++ b/signupParentM.html
@@ -1,5 +1,3 @@
-es (51 sloc)  1.43 KB
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -46,9 +44,8 @@ es (51 sloc)  1.43 KB
  <div >
 
 
-<input type="button" value="Cancel" class="details-button">
-<input type="button" value="Signup" class="details-button">
-<input type="button" value="Edit" class="details-button">
+<label onclick="location.href='mainHome.html';"><input type="button" value="Cancel" class="details-button"></label>
+<label onclick="location.href='parentHomePage.html';"><input type="button" value="Signup" class="details-button" ></label>
 
 <br>
 <br>
