--- a/Bushra.html
+++ b/Bushra.html
@@ -44,7 +44,9 @@
                  <br>
                  <form action="#" method="post">
                  <div class=" sendPrice">
-                    <p>Send a suitable price if you like the offer   
+                    <p>Send a  price if you like the offer  
+                        
+                        -hourly rate-  
                         <label>
                             <input type="text"> <input class = "buttonSend"  type="submit" value="send">
                         </label>
