--- a/Sara.html
+++ b/Sara.html
@@ -56,7 +56,9 @@
                  
                  <form action="#" method="post">
                  <div class=" sendPrice">
-                    <p> Send a suitable price if you like the offer 
+                    <p> Send a  price if you like the offer  
+                        
+                        -hourly rate-
                         <label>
                             <input  type="text" size="5"> <input class = "buttonSend" type="submit" value="send">
                         </label>
