--- a/LoginNamePasM.html
+++ b/LoginNamePasM.html
@@ -14,16 +14,16 @@
     <form method="post">
       
       <label >Username</label>
-            <input type ="text" required>
+            <input type ="text" required ;size="40" width="40">
             <br>
 
             <label>Password</label>
-            <input type=" Psw " placeholder="Password" required>
+            <input type=" Psw " placeholder="Password" required; size="40" width="40">
 <br>
 <br>
             <input type="button" value="Login" class="details-button">
 
-          <P>  Not a member </P>?  <a href ="C:\Users\moner\OneDrive\المستندات\GitHub\web-project\mainHomePageM.html"> Sign Up Here</a></P>
+          <P>  Not a member ?</P>  <a href ="C:\Users\moner\OneDrive\المستندات\GitHub\web-project\mainHomePageM.html"> Sign Up Here</a></P>
     </form>
 </body>
 
