--- a/Sprofile.html
+++ b/Sprofile.html
@@ -5,11 +5,11 @@
         <title>profile</title> 
         <link rel="stylesheet" type="text/css" href="../web-project/style.css">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-        <link rel="stylesheet" href="../web-project/style.css">
+
     </head>
 
 
-    <body class="background"> 
+    <body class="background" > 
 
         <div class="w3-top">
             <div class="w3-bar w3-white w3-wide w3-padding w3-card">
@@ -59,6 +59,7 @@
 <input type="button" value="delete" class="details-button">
 
 <input type="button" value="Edit" class="details-button">
+<input type="button" value="Log out" class="details-button">
 
 <br>
 <br>
@@ -66,6 +67,15 @@
 
 </form>
 
+
 </div>
+<footer class="footer"> 
+    <br>
+    <a href="https://www.facebook.com/" ><img src="../web-project/facebook.png" width="18" height="18"></a>
+    <a href="https://twitter.com/"><img src="../web-project/twitter.png" width="18" height="18"></a>
+    <a href="https://www.instagram.com/"><img src="../web-project/instagram.png"width="18" height="18"></a>
+   
+   <p> babyhood &copy; <a href="#" >www.babyhood.com</a></p>
+  </footer>
 </body>
 </html>
