--- a/ProfileInformation2.html
+++ b/ProfileInformation2.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="../web-project/style.css">
     <title>Profile Infromation 2</title>
     </head>
-    <body class="background" style="text-align:center ;margin-top: 50%; border-style:groove ;font-family:Arial;font-size: 12pt">
+    <body class="background" style="text-align:center">
         <fieldset>
             <div>
                 Phone : 056559876 <br>
