--- a/LoginNamePasM.html
+++ b/LoginNamePasM.html
@@ -6,29 +6,28 @@
   <title>LogeinS</title> 
 </head>
 
-
   <body class="background" style="text-align:center ; margin-top: 10%;font-family:Arial; font-Size:20pt" >  
+    <div class="signUp">
     <h1>
      Login
     </h1>
     <form method="post">
       
       <label >Username</label>
-            <input type ="text" required ;size="40" width="40">
+            <input type ="text" required; size="40">
             <br>
 
             <label>Password</label>
-            <input type=" Psw " placeholder="Password" required; size="40" width="40">
+            <input type=" password" placeholder="Password" required; size="40" >
 <br>
 <br>
             <input type="button" value="Login" class="details-button">
 
-<<<<<<< HEAD
-          <P>  Not a member ?</P>  <a href ="C:\Users\moner\OneDrive\المستندات\GitHub\web-project\mainHomePageM.html"> Sign Up Here</a></P>
-=======
-          <P>  Not a member? </P>  <a href ="../web-project/mainHomePageM.html"> Sign Up Here</a></P>
->>>>>>> a29533a0d69d993eba4b4494863d10bc2976043b
+
+          <P>  Not a member ?</P>  <a href ="../web-project/mainHome.html"> Sign Up Here</a></P>
+
     </form>
+  </div>
 </body>
 
 </html> 
