--- a/mainHome.html
+++ b/mainHome.html
@@ -24,11 +24,8 @@
           </div>
         </div>
       </div>
-      <br><br><br><br><br><br>
-      <br><br><br>
       
-
-<editText class="homePage" style="margin-left:-70px ; margin-top: -45px;">
+<editText class="homePage" style="margin-left:-70px ; margin-top: -95px;">
 <form>
     <br>
 <h2>Sign up as:</h2>
@@ -40,7 +37,7 @@
 </form>
 </editText> 
     
-<footer class="footer"> 
+<footer class="footermine"> 
     <br>
     <a href="https://www.facebook.com/" ><img src="../web-project/facebook.png" width="18" height="18"></a>
     <a href="https://twitter.com/"><img src="../web-project/twitter.png" width="18" height="18"></a>
