--- a/Pprofile.html
+++ b/Pprofile.html
@@ -36,6 +36,7 @@
 <input type="button" value="delete" class="details-button">
 
 <input type="button" value="Edit" class="details-button">
+<input type="button" value="Log out" class="details-button">
 
 <br>
 <br>
