--- a/ProfileInformation.html
+++ b/ProfileInformation.html
@@ -3,47 +3,47 @@
     <head>
      <meta charset="utf-8">  
      <link rel="stylesheet" type="text/css" href="../web-project/style.css">
+ 
         <title>Profile Information</title>
     </head>
     <body class="background" style="text-align:center" >  
-       <div class="signUp">
+       <div class="signUp" style ="font-family:Arial, Helvetica, sans-serif">
       
             Phone : 054367890 <br>
             E-mail : Jenny234@gmail.com 
             <br>
           <div>
-            <p>responsible babysitter seeking for deliver child care excellence for the family, have worked as a babysitter for 4 families and worked for daycare worker.</p>
 <h3>Experience</h3>
 2015 - 2018   babysitter
 <br>
 <br>
-* worked as regular babysitter for childeren from 4 diferent families, received frequent commendations from all four sets of parents<br>
-* Taught a toddler to swim, along with water safety lessons.<br> <br>
-2018 - 2022    DayCare Volunteer
+<li>worked as regular babysitter for childeren from 4 diferent families, received frequent commendations from all four sets of parents</li><br>
+<li>Taught a toddler to swim, along with water safety lessons</li><br> 
+2018 - 2022     DayCare Volunteer
 <br>
 <br>
-* volunteered weekely at a mid-sized daycare, responsible for childeren interaction, conflict resolution, playground supervision, and game creation.<br>
-* changed diapers on little kids.
+<li>volunteered weekely at a mid-sized daycare, responsible for childeren interaction, conflict resolution, playground supervision, and game creation</li><br>
+<li>changed diapers on little kids</li>
 <br>
 <h3>Education</h3>
 Texas A & M university <br>
 Bachleor of Arts : child care.
           </div>
           <br>    
-                <input type="button" value="Contactforinterview" class="details-button">
+                <input type="button" value="ContactForinterview" class="details-button">
         </div>
-        <div class="signUp">
+        <div class="signUp" style ="font-family:Arial, Helvetica, sans-serif">
             <div >
             <img src = "../web-project/IMG_8053.jpg" width="100" height="60"> 
             </div>
             <div>
-                <li><p> good at work and very responsible</p></li>
+                <p> good at work and very responsible</p>
                 <hr>
-               <li><p> jenny was taking care of my children all the time</p></li>
+               <p> jenny was taking care of my children all the time</p>
                 <hr>
-                <li><p> she is the best babysitter i have ever seen</p></li>
+                <p> she is the best babysitter i have ever seen</p>
                 <hr>
-                <li><p> my children love her so much</p></li>
+                <p> my children was does not like her because she was terrible with them</p>
                 </div>  
        
         </div>
