--- a/ProfileInformation2.html
+++ b/ProfileInformation2.html
@@ -5,50 +5,48 @@
     <link rel="stylesheet" type="text/css" href="../web-project/style.css">
     <title>Profile Infromation 2</title>
     </head>
-    <body class="background" style="text-align:center">
-        <fieldset>
-            <div>
+
+    <body class="background" style="text-align:center ;">
+        <div class ="signUp" style ="font-family:Arial, Helvetica, sans-serif">
+            
                 Phone : 056559876 <br>
                 E-mail : debraDB@gmail.com 
-            </div>
         <div>
             <h3>Experience</h3>
             2015 - 2017 special needs child caregiver
             <br>
             <br>
-            * observed childeren to productivity identity issuses with emotional or physical development and worked with parents and supervisiors to address concerns<br>
-            * met with parents about daily activities, positive developments and issuses<br> <br>
+            <li>observed childeren to productivity identity issuses with emotional or physical development and worked with parents and supervisiors to address concerns</li><br>
+            <li>met with parents about daily activities, positive developments and issuses</li><br>
             2017 - 2022    Freelancing BabySitter
             <br>
             <br>
-            * Fostered good relationships with parents consisting of effcient communication and teamwork.<br>
-            * taught language skills by reading books to childeren before bedtime.
+            <li>Fostered good relationships with parents consisting of effcient communication and teamwork</li><br>
+            <li>taught language skills by reading books to childeren before bedtime</li>
             <br>
             <h3>Education</h3>
             Nevada state college <br>
             Bachleor of Arts : libreal arts and general studies.
             </div>
             <br>
-            <div>
-                <input type="button" value="ContactForInterview" class="details-button">
+                <input type="button" value="ContactForinterview" class="details-button">
             </div>
-            </fieldset>
-            <fieldset>
+                <div class = "signUp" style ="font-family:Arial, Helvetica, sans-serif">
                 <div>
               <img src = "../web-project/IMG_8053.jpg" width="100" height="60">
               </div>
         
               <div>
-        <li><p> very professional and ontime</p></li>
+        <p> very professional and ontime</p>
         <hr>
-        <li><p> debra was very helpful with me and my kids</p></li>
+        <p> debra was very helpful with me and my kids</p>
         <hr>
-        <li><p> she hlep me to do plan for my childeren and activities for them</p></li>
+        <p> she hlep me to do plan for my childeren and activities for them</p>
         <hr>
-        <li><p> without her I get lost because my time all it in the work as a doctor</p></li>
+        <p> without her I get lost because my time all it in the work as a doctor</p>
         <hr>
-        <li><p> thank you debra for all what you do for my little babies</p></li>
-              </div>
-            </fieldset>
+        <p> she was good but she always care about activities</p>
+            </div>
+        </div>
     </body>
 </html>
