--- a/offerStatus.html
+++ b/offerStatus.html
@@ -24,5 +24,18 @@
         <p>offer which you sent to eng.Ali</p>
         <label><input type="button" value="Pending" style="background-color:rgb(233, 241, 91);" class="status-button"></label>
     </div>
+
+
+
+
+    
     </body>
+    <footer class="footer"> 
+        <br>
+        <a href="https://www.facebook.com/" ><img src="../web-project/facebook.png" width="18" height="18"></a>
+        <a href="https://twitter.com/"><img src="../web-project/twitter.png" width="18" height="18"></a>
+        <a href="https://www.instagram.com/"><img src="../web-project/instagram.png"width="18" height="18"></a>
+       
+       <p> babyhood &copy; <a href="#" >www.babyhood.com</a></p>
+      </footer>
 </html>
