--- a/ProfileInformation.html
+++ b/ProfileInformation.html
@@ -8,25 +8,26 @@
     </head>
     <body class="background" style="text-align:center" >  
        <div class="signUp" style ="font-family:Arial, Helvetica, sans-serif">
-      
-            Phone : 054367890 <br>
-            E-mail : Jenny234@gmail.com 
+      <h3 style="font-size:25px">profile detail</h3>
+      <h3>contact information:</h3>
+            Phone number : <strong>054367890 </strong><br>
+            E-mail : <strong>Jenny234@gmail.com </strong>
             <br>
           <div>
 <h3>Experience</h3>
-2015 - 2018   babysitter
+<li style="text-align: left;" > <strong>2015 - 2018 </strong>  babysitter .</li>
 <br>
 <br>
-<li>worked as regular babysitter for childeren from 4 diferent families, received frequent commendations from all four sets of parents</li><br>
-<li>Taught a toddler to swim, along with water safety lessons</li><br> 
-2018 - 2022     DayCare Volunteer
+<li style="text-align: left;" >worked as regular babysitter for childeren from 4 diferent families, received frequent commendations from all four sets of parents .</li><br>
+<li style="text-align: left;">Taught a toddler to swim, along with water safety lessons .</li><br> 
+<li style="text-align: left;"> <strong>2018 - 2022 </strong> DayCare Volunteer .</li>
 <br>
 <br>
-<li>volunteered weekely at a mid-sized daycare, responsible for childeren interaction, conflict resolution, playground supervision, and game creation</li><br>
-<li>changed diapers on little kids</li>
+<li style="text-align: left;">volunteered weekely at a mid-sized daycare, responsible for childeren interaction, conflict resolution, playground supervision, and game creation .</li><br>
+<li style="text-align: left;">changed diapers on little kids.</li>
 <br>
 <h3>Education</h3>
-Texas A & M university <br>
+Texas A & M university .<br>
 Bachleor of Arts : child care.
           </div>
           <br>    
@@ -34,16 +35,18 @@ Bachleor of Arts : child care.
         </div>
         <div class="signUp" style ="font-family:Arial, Helvetica, sans-serif">
             <div >
+                <h3 style="font-size:25px">rating :</h3>
             <img src = "../web-project/IMG_8053.jpg" width="100" height="60"> 
             </div>
-            <div>
-                <p> good at work and very responsible</p>
+            <div >
+                <h3 style="font-size:25px">review :</h3>
+                <p> good at work and very responsible .</p>
                 <hr>
-               <p> jenny was taking care of my children all the time</p>
+               <p> jenny was taking care of my children all the time .</p>
                 <hr>
-                <p> she is the best babysitter i have ever seen</p>
+                <p> she is the best babysitter i have ever seen .</p>
                 <hr>
-                <p> my children was does not like her because she was terrible with them</p>
+                <p> my children was does not like her because she was terrible with them .</p>
                 </div>  
        
         </div>
