--- a/Rating2.html
+++ b/Rating2.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Rating and Review</title>
+    <link rel="stylesheet" type="text/css" href="../web-project/style.css">
     <link rel="stylesheet" href="../web-project/Rating.css">
   </head>
   <body class="background" >
@@ -32,14 +33,18 @@
    
    <div>
    <p class="review-box"> <label > Review: <br>
-   <textarea name="Review" rows = "7" cols= "58"> "Enter your Review here!." </textarea> </label> </p>
+   <textarea name="Review" rows = "7" cols= "67"> "Enter your Review here!." </textarea> </label> </p>
    
   
 
 <a href="Thank.html">
   <input type="button" value="submit" class="details-button">
 </a>
-   
+
+
+
   </body>
-  </div>
-</html>
+  
+</div>
+
+</html> 
