--- a/Thank.html
+++ b/Thank.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
     <title>Thank you</title>
     <link rel="stylesheet" href="Rating.css">
 </head>
@@ -17,4 +18,5 @@
   </a>
 
 </body>  
+
 </html>
