--- a/ProfileInformation.html
+++ b/ProfileInformation.html
@@ -2,13 +2,11 @@
 <html>
     <head>
      <meta charset="utf-8">  
-     <link rel="stylesheet" type="text/css" href="../web-project/style.css">
- 
+     <link type="text/css" type="text/css" href=".../web-project/style.css"> 
         <title>Profile Information</title>
     </head>
     <body class="background" style="text-align:center" >  
-       <div class="signUp" style ="font-family:Arial, Helvetica, sans-serif">
-      
+       <div class="signUp">
             Phone : 054367890 <br>
             E-mail : Jenny234@gmail.com 
             <br>
@@ -29,12 +27,12 @@
 Texas A & M university <br>
 Bachleor of Arts : child care.
           </div>
-          <br>    
-                <input type="button" value="ContactForinterview" class="details-button">
+          <br>
+        <input type="button" value="Contactforinterview" class="details-button">
         </div>
         <div class="signUp" style ="font-family:Arial, Helvetica, sans-serif">
             <div >
-            <img src = "../web-project/IMG_8053.jpg" width="100" height="60"> 
+            <img src = ".../web-project/IMG_8053.jbg" width="100" height="60"> 
             </div>
             <div>
                 <p> good at work and very responsible</p>
