--- a/LoginNamePasM.html
+++ b/LoginNamePasM.html
@@ -14,20 +14,16 @@
     <form method="post">
       
       <label >Username</label>
-            <input type ="text" required ;size="40" width="40">
+            <input type ="text" required ;>
             <br>
 
             <label>Password</label>
-            <input type=" Psw " placeholder="Password" required; size="40" width="40">
+            <input type=" Psw " placeholder="Password" required;>
 <br>
 <br>
             <input type="button" value="Login" class="details-button">
 
-<<<<<<< HEAD
           <P>  Not a member ?</P>  <a href ="C:\Users\moner\OneDrive\المستندات\GitHub\web-project\mainHomePageM.html"> Sign Up Here</a></P>
-=======
-          <P>  Not a member? </P>  <a href ="../web-project/mainHomePageM.html"> Sign Up Here</a></P>
->>>>>>> a29533a0d69d993eba4b4494863d10bc2976043b
     </form>
 </body>
 
