--- a/requestList.html
+++ b/requestList.html
@@ -54,7 +54,7 @@
     three kids,from 8pm to 10pm.
     <br>
     <br>
-      <a href="C:\Users\asus\Desktop\PA\.vscode\Sara.html">
+      <a href="../web-project/Sara.html">
         <input type="button" value="details" class="details-button">
       </a>
    </p>
@@ -67,7 +67,7 @@
         tow kids,from 6am to 11am.
         <br>
         <br>
-          <a  href="C:\Users\asus\Desktop\PA\.vscode\Sami.html">
+          <a  href="../web-project/Sami.html">
             <input type="button" value="details" class="details-button">
           </a>
        </p></div>
@@ -79,7 +79,7 @@
         one kid,from 4pm to 8pm.
         <br>
         <br>
-          <a href="C:\Users\asus\Desktop\PA\.vscode\Bushra.html">
+          <a href="../web-project/Bushra.html">
             <input type="button" value="details" class="details-button">
           </a>
        </p></div>
