--- a/Sara.html
+++ b/Sara.html
@@ -25,7 +25,7 @@
     </div>
   </div>
   <br><br><br><br><br>
-<body class="background">
+<body class="background" ></body>
     <div class="kids-info">
         <h2>Kids</h2>
         <h5>Joly</h5>
@@ -78,4 +78,12 @@
             </form>
                  
 </body>
+<footer class="footer"> 
+    <br>
+    <a href="https://www.facebook.com/" ><img src="../web-project/facebook.png" width="18" height="18"></a>
+    <a href="https://twitter.com/"><img src="../web-project/twitter.png" width="18" height="18"></a>
+    <a href="https://www.instagram.com/"><img src="../web-project/instagram.png"width="18" height="18"></a>
+   
+   <p> babyhood &copy; <a href="#" >www.babyhood.com</a></p>
+  </footer>
 </html>
