--- a/ProfileInformation.html
+++ b/ProfileInformation.html
@@ -2,7 +2,9 @@
 <html>
     <head>
      <meta charset="utf-8">  
-     <link type="text/css" type="text/css" href=".../web-project/style.css"> 
+     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+     <link rel="stylesheet" type="text/css" href="../web-project/style.css">
+
         <title>Profile Information</title>
     </head>
 
@@ -28,7 +30,7 @@
         </div>
       </div>
       <br><br><br><br><br><br>
-      <br><br><br>
+      
 
     <body class="background" style="text-align:center" >  
        <div class="signUp">
@@ -55,9 +57,10 @@ Bachleor of Arts : child care.
           <br>
         <input type="button" value="Contactforinterview" class="details-button">
         </div>
+        <br>
         <div class="signUp" style ="font-family:Arial, Helvetica, sans-serif">
             <div >
-            <img src = ".../web-project/IMG_8053.jbg" width="100" height="60"> 
+            <img src = "../web-project/IMG_8053.jpg" width="100" height="60"> 
             </div>
             <div >
                 <h3 style="font-size:25px">review :</h3>
