--- a/ProfileInformation2.html
+++ b/ProfileInformation2.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href=".../web-project/style.css"> 
+    <meta charset="utf-8"><link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" type="text/css" href="../web-project/style.css"> <link rel="stylesheet" type="text/css" href=".../web-project/style.css"> 
     <title>Profile Infromation 2</title>
     </head>
     <body class="background" style="text-align:center">
