--- a/LoginParent.html
+++ b/LoginParent.html
@@ -21,7 +21,7 @@
             <input type=" password" placeholder="Password" required; size="40" >
 <br>
 <br>
-            <input type="button" value="Login" class="details-button">
+            <a href="../web-project/parentHomePage.html"><input type="button" value="Login" class="details-button"></a>
 
 
           <P>  Not a member ?</P>  <a href ="../web-project/mainHome.html"> Sign Up Here</a></P>
