--- a/Pprofile.html
+++ b/Pprofile.html
@@ -55,7 +55,7 @@
 <input type="button" value="delete" class="details-button">
 
 <input type="button" value="Edit" class="details-button">
-<input type="button" value="Log out" class="details-button">
+<a href="../web-project/mainHome.html"><input type="button" value="Log out" class="details-button"></a>
 
 <br>
 <br>
