--- a/veiwDetailsOffer2.html
+++ b/veiwDetailsOffer2.html
@@ -34,7 +34,7 @@
          <div>
         <h3>Debra Brambila</h3>
         <p>attentive childcare professional offering 5 years of Experience caring for up to 5 childeren, positive role model focuse on supporting development and teaching new skills. </p>
-        <a href="../web-project/ProfileInformation2.html"><input type="button" value=" babysitter profile" class="Send-request-button"></a>
+        <a href="../web-project/ProfileInformation.html"><input type="button" value="view profile" class="details-button"></a>
                  </div>
                 </div>
                  <div class="Experience">
@@ -62,7 +62,7 @@
                  </div>
                  <form method="post" action="#">
                     <p class="Accept-and-reject-request-button">
-                        <input type="submit" value="Accept" class="Send-request-button"><a href="../web-project/parentHomePage.html"><input type="button" class="Cancel-request-button" value="reject"></a>
+                        <input type="submit" value="Accept" class="details-button"><a href="../web-project/parentHomePage.html"><input type="button" class="details-button" value="reject"></a>
                  </form>
                  <div class="BabysitterPhoto">
                     <img src="../web-project/IMG_7997.JPG" width="250" height="150" >
