--- a/mainHome.html
+++ b/mainHome.html
@@ -24,15 +24,16 @@
           </div>
         </div>
       </div>
+
       
-<editText class="homePage" style="margin-left:-70px ; margin-top: -95px;">
+<editText class="homePage" style="margin-left:-70px ; margin-top: -40px;">
 <form>
     <br>
 <h2>Sign up as:</h2>
 <label onclick="location.href='signupParentM.html';"><input type="button" value="parent" class="details-buttonn"></label>
 <label onclick="location.href='signUpBabysitterM.html';"><input type="button" value="Babysitter" class="details-buttonn"></label>
 <h2>Login as:</h2>
-<label onclick="location.href='loginNamePasM.html';"><input type="button" value="parent" class="details-buttonn"></label>
+<label onclick="location.href='loginParent.html';"><input type="button" value="parent" class="details-buttonn"></label>
 <label onclick="location.href='LoginNamePasM.html';"><input type="button" value="Babysitter " class="details-buttonn"></label>
 </form>
 </editText> 
