--- a/Rating2.html
+++ b/Rating2.html
@@ -30,9 +30,9 @@
         <span class="result"></span>
       </div>
    </div>
-   
+   <h1 class="review-label"> Review:</h1>
    <div>
-   <p class="review-box"> <label > Review: <br>
+   <p class="review-box"> <label ><br>
    <textarea name="Review" rows = "7" cols= "67"> "Enter your Review here!." </textarea> </label> </p>
    
   
@@ -44,14 +44,7 @@
 
    </div>
   </body>
-  <footer class="footer"> 
-    <br>
-    <a href="https://www.facebook.com/" ><img src="../web-project/facebook.png" width="18" height="18"></a>
-    <a href="https://twitter.com/"><img src="../web-project/twitter.png" width="18" height="18"></a>
-    <a href="https://www.instagram.com/"><img src="../web-project/instagram.png"width="18" height="18"></a>
-   
-   <p> babyhood &copy; <a href="#" >www.babyhood.com</a></p>
-  </footer>
+  
 
 
-</html> 
+</html>
