--- a/mainHome.html
+++ b/mainHome.html
@@ -34,7 +34,7 @@
 <label onclick="location.href='signUpBabysitterM.html';"><input type="button" value="Babysitter" class="details-buttonn"></label>
 <h2>Login as:</h2>
 <label onclick="location.href='loginParent.html';"><input type="button" value="parent" class="details-buttonn"></label>
-<label onclick="location.href='LoginNamePasM.html';"><input type="button" value="Babysitter " class="details-buttonn"></label>
+<label onclick="location.href='loginbabySiteerM.html';"><input type="button" value="Babysitter " class="details-buttonn"></label>
 </form>
 </editText> 
     
