--- a/ProfileInformation.html
+++ b/ProfileInformation.html
@@ -33,11 +33,9 @@
 <h3>Experience</h3>
 <li style="text-align: left;" > <strong>2015 - 2018 </strong>  babysitter .</li>
 <br>
-<br>
 <li style="text-align: left;" >worked as regular babysitter for childeren from 4 diferent families, received frequent commendations from all four sets of parents .</li><br>
 <li style="text-align: left;">Taught a toddler to swim, along with water safety lessons.</li><br> 
 <li style="text-align: left;"> <strong>2018 - 2022 </strong> DayCare Volunteer .</li>
-<br>
 <br>
 <li style="text-align: left;">volunteered weekely at a mid-sized daycare, responsible for childeren interaction, conflict resolution, playground supervision, and game creation .</li><br>
 <li style="text-align: left;">changed diapers on little kids.</li>
@@ -47,10 +45,13 @@ Texas A & M university .<br>
 Bachleor of Arts : child care.
           </div>
           <br>
-        <input type="button" value="Contact" class="details-button">
+        <a href= "mailto:Jenny234@gmail.com "><input type="button" value="Contact" class="details-button"></a>
         </div>
         <br>
+        <br>
         <div class="signUp" style ="font-family:Arial, Helvetica, sans-serif">
+          <br>
+          <br>
             <div >
               <h3 style="font-size:25px">rating :</h3>
             <img src = "../web-project/IMG_8053.jpg" width="100" height="60"> 
