--- a/Pprofile.html
+++ b/Pprofile.html
@@ -42,24 +42,24 @@
 <botton class="profile">Sara33@gmail.com</botton>
 <br>
 <br>
- 
+
 
 <botton class="profile">Riyadh</botton>
 
 <br>
 <br>
 <botton class="profile">Al-Falah neighborhood next to Al-Dawa's pharmacy</botton>
- <div >
+<div >
 <br>
 
-<input type="button" value="delete" class="details-button">
+<input type="button" value="delete" class="button-cancel">
 
 <input type="button" value="Edit" class="details-button">
 <a href="../web-project/mainHome.html"><input type="button" value="Log out" class="details-button"></a>
 
 <br>
 <br>
- </div>
+</div>
 
 </form>
 
@@ -71,7 +71,7 @@
     <a href="https://www.facebook.com/" ><img src="../web-project/facebook.png" width="18" height="18"></a>
     <a href="https://twitter.com/"><img src="../web-project/twitter.png" width="18" height="18"></a>
     <a href="https://www.instagram.com/"><img src="../web-project/instagram.png"width="18" height="18"></a>
-   
-   <p> babyhood &copy; <a href="#" >www.babyhood.com</a></p>
+
+<p> babyhood &copy; <a href="#" >www.babyhood.com</a></p>
   </footer>
 </html>
