--- a/Sara.html
+++ b/Sara.html
@@ -5,7 +5,7 @@
     link rel="stylesheet" type="text/css" href="../web-project/style.css"> 
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" type="text/css" href="../web-project/style.css">  
-    <title>Sara</title>
+    <title>Sara profile</title>
     
 
 </head>
