--- a/signupParentM.html
+++ b/signupParentM.html
@@ -55,7 +55,8 @@
 <br>
 <br>
 <label for="Pic"><b>Upload a photo </b></label>
- <input type="file" placeholder="Enter City " name="City" required>
+<input type ="file"onchange ="readURL(this)" accept="image/*">
+
 <br>
 <br>
 <label for="City"><b>City </b></label>
