--- a/requestList.html
+++ b/requestList.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" type="text/css" href="../web-project/style.css">
+<script scr="events.js"> </script>
 
 </head >
 <body class="background">
@@ -56,6 +57,8 @@
       <a href="../web-project/Sara.html">
         <input type="button" value="details" class="details-button">
       </a>
+        <input type="button" value="send price" onclick="sendPrice()" class="details-button" id="price">
+     
    </p>
 </div>
   <div class="parent-profile" ><p class="photo"><img src="../web-project/family.jpg" width="80" height="120"></p>
