--- a/signupParentM.html
+++ b/signupParentM.html
@@ -63,7 +63,7 @@
  <input type="text" placeholder="Enter City " name="City" required>
 <br>
 <br>
- <P><a style="color:green ;text-decoration-style: double;" href="https://goo.gl/maps/4pBw6wdV1Bo3H98A7" >view home location</a></P>
+ <input type="text" name ="location" placeholder="Enter your address" required size="40">
 <br>
 <br>
  <div >
