--- a/signupParentM.html
+++ b/signupParentM.html
@@ -63,7 +63,7 @@
  <input type="text" placeholder="Enter City " name="City" required>
 <br>
 <br>
- <P><a style="color:green ;text-decoration-style: double;" href="https://goo.gl/maps/4pBw6wdV1Bo3H98A7" >view home location</a></P>
+<label>home location <input type="text" placeholder="describe your home location" name="home location" required></label>
 <br>
 <br>
  <div >
