--- a/requestList.html
+++ b/requestList.html
@@ -69,6 +69,7 @@
           <a  href="../web-project/Sami.html">
             <input type="button" value="details" class="details-button">
           </a>
+          <input type="button" value="price" class="details-button">
        </p></div>
   <div class="parent-profile"><p class="photo"><img src="../web-project/baby.jpg" width="80" height="120"></p>
     <p>
